feat: 修复评论不显示的情况

--- a/miniprogram/packageSkyline/pages/half-page/half-page/index.less
+++ b/miniprogram/packageSkyline/pages/half-page/half-page/index.less
@@ -1,6 +1,15 @@
 page {
   padding: 15px 0;
 }
+
+.comment-container {
+  width: 100%;
+  height: 100%;
+  padding-top: 40px;
+  display: flex;
+  flex-direction: column;
+}
+
 .bottom-sheet {
   position: relative;
   display: flex;
@@ -9,6 +18,7 @@ page {
   justify-content: center;
   height: 50px;
 }
+
 .bottom-sheet .btn-wrp {
   position: absolute;
   left: 0;
@@ -18,6 +28,7 @@ page {
   align-items: center;
   justify-content: center;
 }
+
 .bottom-sheet .btn {
   width: 24px;
   height: 24px;
@@ -27,13 +38,16 @@ page {
   align-items: center;
   justify-content: center;
 }
+
 .bottom-sheet .icon {
   width: 12px;
   height: 12px;
 }
+
 .bottom-sheet .title {
   font-size: 18px;
 }
+
 .comment-item {
   // width: 100%;
   // height: 60px;
@@ -42,6 +56,7 @@ page {
   // flex-direction: row;
   // align-items: center;
 }
+
 .avatar {
   width: 40px;
   height: 40px;
@@ -49,6 +64,7 @@ page {
   border-radius: 50%;
   background: #ccc;
 }
+
 /* .comment {
   height: 40px;
   flex-grow: 1;
@@ -74,7 +90,8 @@ page {
   font-size: 13px;
   line-height: 1.4;
 
-  .main-comment, .sub-comment {
+  .main-comment,
+  .sub-comment {
     width: 100%;
     display: flex;
     flex-direction: row;
