feat: 增加openOfficialAccountArticle,openOfficialAccountProfile (#178)
* feat: 增加openOfficialAccountArticle,openOfficialAccountProfile

* feat: 增加公众号页面

---------

Co-authored-by: v_guanglwen <v_guanglwen@tencent.com>

--- a/miniprogram/packageAPI/pages/api/jump/jump.wxml
+++ b/miniprogram/packageAPI/pages/api/jump/jump.wxml
@@ -1,8 +1,7 @@
 <import src="../../../../common/head.wxml" />
 <import src="../../../../common/foot.wxml" />
-
 <view class="container page" data-weui-theme="{{theme}}">
-  <template is="head" />
+  <template is="head" data="{{title: 'jumpApi'}}" />
   <view class="page-body">
     <!-- 暂时下架 -->
     <!-- <view class="btn-area">
