--- a/miniprogram/packageExtend/pages/adapt/freelayout/freelayout.wxml
+++ b/miniprogram/packageExtend/pages/adapt/freelayout/freelayout.wxml
@@ -3,53 +3,43 @@
     <mp-row>
       <mp-col xs="{{24}}" span="{{0}}">
         <view>
-          <view class="item item-A">
-            A
-          </view>
+          <view class="item item-A">A</view>
         </view>
       </mp-col>
       <mp-col xs="{{24}}" span="{{0}}">
         <view>
-          <view class="item item-B">
-            B
-          </view>
+          <view class="item item-B">B</view>
         </view>
       </mp-col>
       <mp-col xs="{{24}}" span="{{0}}">
         <view>
-          <view class="{{theme === 'dark' ? 'item dark-C' : 'item item-C'}}">
-            C
-          </view>
+          <view class="{{theme === 'dark' ? 'item dark-C' : 'item item-C'}}">C</view>
         </view>
       </mp-col>
     </mp-row>
     <!-- 宽屏左右布局 -->
     <mp-row>
       <mp-col xs="{{0}}" span="{{16}}">
-       <mp-row>
-        <mp-col>
-           <view>
-            <view class="item item-A">
-              A
+        <mp-row>
+          <mp-col>
+            <view>
+              <view class="item item-A">A</view>
             </view>
-          </view>
-        </mp-col>
-        <mp-col>
-           <view>
-            <view class="item item-B">
-              B
+          </mp-col>
+          <mp-col>
+            <view>
+              <view class="item item-B">B</view>
             </view>
-          </view>
-        </mp-col>
-       </mp-row>
+          </mp-col>
+        </mp-row>
       </mp-col>
       <mp-col xs="{{0}}" span="{{8}}">
-          <view>
-            <view class="{{theme === 'dark' ? 'item dark-C' : 'item item-C'}}" style="height: 490px; line-height:480px;">
-              C
-            </view>
+        <view>
+          <view class="{{theme === 'dark' ? 'item dark-C' : 'item item-C'}}" style="height: 490px; line-height:480px;">
+            C
           </view>
-        </mp-col>
+        </view>
+      </mp-col>
     </mp-row>
   </view>
 </view>
