--- a/miniprogram/packageExtend/pages/adapt/pagination/pagination.wxml
+++ b/miniprogram/packageExtend/pages/adapt/pagination/pagination.wxml
@@ -2,17 +2,13 @@
   <mp-row>
     <mp-col xs="{{24}}" span="{{12}}">
       <view>
-        <view class="item item-A">
-          A
-        </view>
+        <view class="item item-A">A</view>
       </view>
     </mp-col>
     <mp-col xs="{{24}}" span="{{12}}">
       <view>
-        <view class="item item-B">
-          B
-        </view>
+        <view class="item item-B">B</view>
       </view>
     </mp-col>
   </mp-row>
-</view> 
+</view>
