--- a/miniprogram/packageExtend/pages/adapt/telescopic/telescopic.wxml
+++ b/miniprogram/packageExtend/pages/adapt/telescopic/telescopic.wxml
@@ -2,28 +2,24 @@
   <mp-row>
     <mp-col span="{{12}}">
       <view>
-        <view class="item">
-        </view>
+        <view class="item"></view>
       </view>
     </mp-col>
     <mp-col span="{{12}}">
       <view>
-        <view class="item">
-        </view>
+        <view class="item"></view>
       </view>
     </mp-col>
   </mp-row>
   <mp-row>
     <mp-col span="{{12}}">
       <view>
-        <view class="item">
-        </view>
+        <view class="item"></view>
       </view>
     </mp-col>
     <mp-col span="{{12}}">
       <view>
-        <view class="item">
-        </view>
+        <view class="item"></view>
       </view>
     </mp-col>
   </mp-row>
