--- a/miniprogram/packageComponent/pages/media/channel-live/channel-live.wxml
+++ b/miniprogram/packageComponent/pages/media/channel-live/channel-live.wxml
@@ -1,6 +1,19 @@
-<view>
-	<channel-live
-		feed-id="export/UzFfAgtgekIEAQAAAAAA7UEOPV-7TQAAAAstQy6ubaLX4KHWvLEZgBPEiYIALRwBBP6BzNPgMIspjeQfphOob7LuGRJz_8UF"
-		finder-user-name="sphiUesg6A9wDtl"
-	></channel-live>
-</view> 
+<import src="../../../../common/head.wxml" />
+<import src="../../../../common/foot.wxml" />
+
+<mp-navigation-bar title="channel-live" back="{{true}}"></mp-navigation-bar>
+<template is="head" data="{{title: 'channel-live'}}"/>
+<scroll-view class="page-scroll-view" scroll-y type="list">
+  <view class="container page" data-weui-theme="{{theme}}">
+    <view class="page-body">
+      <view class="page-section page-section-spacing">
+  	    <channel-live
+          style="width: 300px; height: 500px"
+  	    	feed-id="export/UzFfAgtgekIEAQAAAAAA7UEOPV-7TQAAAAstQy6ubaLX4KHWvLEZgBPEiYIALRwBBP6BzNPgMIspjeQfphOob7LuGRJz_8UF"
+  	    	finder-user-name="sphiUesg6A9wDtl"
+  	    ></channel-live>
+      </view>
+    </view>
+    <template is="foot" />
+  </view> 
+</scroll-view>
