--- a/miniprogram/packageComponent/pages/media/channel-video/channel-video.wxss
+++ b/miniprogram/packageComponent/pages/media/channel-video/channel-video.wxss
@@ -1,14 +1,12 @@
-.intro {
-	margin: 30px;
-	text-align: center;
-  }
-  button {
-	  width: 240px !important;
-	  margin-top: 40px;
-	  line-height: 40px;
-  }
-  view {
-	  text-align: center;
-	  margin-top: 50px;
-  }
-  
+@import "../../../../common/reset.wxss";
+
+.page-section-title{
+  padding: 0;
+}
+.page-section-title{
+  margin-top: 30px;
+  position: relative;
+}
+.page-foot{
+  margin-top: 25px;
+}
